web-infras/parser/tests/fixtures/babel/core/uncategorised/545/output.txt
[SyntaxError]: Unexpected reserved word. (1,9)
1|const { public } = foo();
 |       ^
